enhance intro lines in read me

--- a/immo-project.ipynb
+++ b/immo-project.ipynb
@@ -1,6 +1,35 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Swiss Housing Price Predictor 🏠💰\n",
+    "\n",
+    "Hello, we are Tobias, Sascha, and Florian. Our goal for this project is to build a predictive model for Swiss housing prices. We aim to achieve this by leveraging current web data. \n",
+    "\n",
+    "![Swiss House](https://archivaldesigns.com/cdn/shop/products/Peach-Tree-Front_1200x.jpg?v=1648224612)\n",
+    "\n",
+    "This project will involve several steps:\n",
+    "\n",
+    "1. **Data Collection**: Scrape housing data from various online sources.\n",
+    "2. **Preprocessing**: Clean and format the data for analysis.\n",
+    "3. **Exploratory Data Analysis**: Understand the data and find any interesting trends.\n",
+    "4. **Feature Engineering**: Create new features from the existing data to improve our model's performance.\n",
+    "5. **Model Building**: Train a machine learning model on our processed data.\n",
+    "6. **Evaluation**: Test our model's performance and make any necessary adjustments.\n",
+    "\n",
+    "Our hope is that our model will be able to accurately predict housing prices, providing valuable insights for both buyers and sellers in the Swiss housing market. \n",
+    "\n",
+    "You can check out our code [here on GitHub](https://github.com/meichflo/ADS_Project_group3).\n",
+    "\n",
+    "```python\n",
+    "# Sample Python Code\n",
+    "def hello_world():\n",
+    "    print(\"Hello, world!\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
