create db script, changed readme

--- a/immo-project.ipynb
+++ b/immo-project.ipynb
@@ -19,14 +19,11 @@
     "5. **Model Building**: Train a machine learning model on our processed data.\n",
     "6. **Evaluation**: Test our model's performance and make any necessary adjustments.\n",
     "\n",
-    "Our hope is that our model will be able to accurately predict housing prices, providing valuable insights for both buyers and sellers in the Swiss housing market. \n",
+    "Our aim is that our model will be able to accurately predict housing prices, providing valuable insights for both buyers and sellers in the Swiss housing market. \n",
     "\n",
     "You can check out our code [here on GitHub](https://github.com/meichflo/ADS_Project_group3).\n",
     "\n",
-    "```python\n",
-    "# Sample Python Code\n",
-    "def hello_world():\n",
-    "    print(\"Hello, world!\")"
+    "> \"The only way to do great work is to love what you do.\" - Steve Jobs"
    ]
   },
   {
