change in markdown

--- a/create_db.ipynb
+++ b/create_db.ipynb
@@ -14,7 +14,8 @@
     "docker rm –f container_name # Löscht den Container \"container_name\", samt den Daten\n",
     "docker images # Listet alle Images auf, die im Moment zur Verfügung stehen. Wie ein App-Store für Software-Entwicklung\n",
     "```\n",
-    "\n",
+    "# Intention\n",
+    "Da wir keinen zentralen DB-Server haben, benötigt jeder auf seinem Rechener einen DB-Klon. Dafür setzt man den DB-Server lokal in einem Container auf. Dieses Skript erledigt das für dich. \n",
     "# Installation der Docker DB\n",
     "Hier eine Anleitung zur lokalen Installation der MySQL Datenbank aus dem Terminal. Die folgenden Zellen unten machen das aber schon direkt für dich.\n",
     "1.\tImage holen\n",
@@ -277,7 +278,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Jupyter notebook --footer info--"
+    "# Jupyter notebook --footer info--"
    ]
   },
   {
