Improved scraper (user agent and detailed pages)

--- a/immo-project.ipynb
+++ b/immo-project.ipynb
@@ -56,6 +56,8 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.image as mpimg\n",
     "\n",
+    "from datetime import datetime\n",
+    "\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.common.keys import Keys\n",
@@ -94,57 +96,141 @@
     }
    ],
    "source": [
-    "# Set options for Chrome-Driver (headless mode)\n",
+    "# List of user agents to rotate through\n",
+    "ua_list = [\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0.3 Safari/605.1.15\",\n",
+    "           \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36\",\n",
+    "           \"Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:88.0) Gecko/20100101 Firefox/88.0\"]\n",
+    "\n",
+    "# Set up the Chrome driver with a random user agent and headless mode\n",
     "opts = Options()\n",
-    "#opts.add_argument(\"--headless\")\n",
-    "#opts.add_argument(\"user-agent=\" + random.choice(ua_list))\n",
-    "service = Service(executable_path=r'C:\\Tools\\chromedriver\\chromedriver.exe')\n",
-    "driver = webdriver.Chrome(service=service, options=opts)\n",
+    "opts.add_argument(\"--headless\")\n",
+    "opts.add_argument(\"user-agent=\" + random.choice(ua_list))\n",
+    "\n",
+    "#service = Service(executable_path=r'C:\\Tools\\chromedriver\\chromedriver.exe')\n",
+    "service = Service(executable_path=r'/Users/tobiaskoller/Library/CloudStorage/OneDrive-ZHAW/2. Semester/Applied Data Science/tools/chromedriver-mac-x64/chromedriver')\n",
+    "\n",
     "# Chrome-Driver\n",
     "driver = webdriver.Chrome(service=service, options=opts)\n",
     "\n",
-    "# Website to scrape\n",
-    "url = 'https://www.immoscout24.ch/de/immobilien/mieten/kanton-zuerich?pn=1'\n",
-    "driver.get(url)\n",
+    "# Base URL of the website to scrape\n",
+    "base_url = 'https://www.immoscout24.ch/de/immobilien/mieten/kanton-zuerich?pn='\n",
     "\n",
-    "# Get webpage number from url\n",
-    "pattern = r'=(.*)'\n",
-    "page = re.search(pattern, url)\n",
+    "# Initialize an empty list to store scraped data\n",
+    "all_detail_urls = []\n",
     "\n",
-    "# Get the full content of the website\n",
-    "source = driver.page_source\n",
     "\n",
-    "# Close driver\n",
+    "current_page = 1    # Start with page 1 of the search results\n",
+    "max_pages = 1  # Specify the maximum number of pages to scrape\n",
+    "\n",
+    "# Loop through all pages to extract URLs of property listings\n",
+    "while current_page <= max_pages:\n",
+    "    driver.get(base_url + str(current_page))     # Load the website\n",
+    "    source = driver.page_source                  # Get the full content of the website\n",
+    "    soup = BeautifulSoup(source, 'html.parser')  # Parse HTML content with BeautifulSoup\n",
+    "    \n",
+    "    # Extract detail page URLs\n",
+    "    listing_links_elements = soup.find_all('a', class_='HgCardElevated_content_uir_2 HgCardElevated_link_EHfr7')\n",
+    "    detail_urls = [link['href'] for link in listing_links_elements if 'href' in link.attrs]\n",
+    "    # Assuming the href might not be a full URL, prepend base URL if needed\n",
+    "    full_urls = ['https://www.immoscout24.ch' + url if not url.startswith('http') else url for url in detail_urls]\n",
+    "    all_detail_urls.extend(full_urls)\n",
+    "\n",
+    "    # Increment the page number\n",
+    "    current_page += 1\n",
+    "\n",
+    "# Initialize empty lists to store the scraped data\n",
+    "all_detailed_id = []\n",
+    "all_detailed_title = []\n",
+    "all_detailed_address = []\n",
+    "all_detailed_price = []\n",
+    "all_detailed_rooms = []\n",
+    "all_detailed_squareMeters = []\n",
+    "all_detailed_descriptions = [] \n",
+    "all_detailed_coreAttributes = []\n",
+    "all_detailed_features = []\n",
+    "\n",
+    "\n",
+    "test_urls = ['https://www.immoscout24.ch/mieten/4000855763', 'https://www.immoscout24.ch/mieten/4000894477']\n",
+    "\n",
+    "# Loop through all detail URLs to extract detailed information\n",
+    "for url in all_detail_urls:\n",
+    "    driver.get(url)\n",
+    "    detailed_source = driver.page_source\n",
+    "    detailed_soup = BeautifulSoup(detailed_source, 'html.parser')\n",
+    "\n",
+    "    detailed_id = re.search(r'\\d+', url).group()\n",
+    "\n",
+    "    detailed_title_element = detailed_soup.find('h1', class_='ListingTitle_spotlightTitle_ENVSi')\n",
+    "    detailed_title = detailed_title_element.text.strip() if detailed_title_element else 'No title found'\n",
+    "    all_detailed_title.append(detailed_title)\n",
+    "\n",
+    "    detailed_address_element = detailed_soup.find('address', class_='AddressDetails_address_i3koO')\n",
+    "    detailed_address = detailed_address_element.text.strip() if detailed_address_element else 'No address found'\n",
+    "    all_detailed_address.append(detailed_address)\n",
+    "\n",
+    "    detailed_price_element = detailed_soup.find('div', class_='SpotlightAttributesPrice_value_TqKGz')\n",
+    "    detailed_price = detailed_price_element.text.strip() if detailed_price_element else 'No price found'\n",
+    "    all_detailed_price.append(detailed_price)\n",
+    "\n",
+    "    detailed_rooms_element = detailed_soup.find('div', class_='SpotlightAttributesNumberOfRooms_value_TUMrd')\n",
+    "    detailed_rooms = detailed_rooms_element.text.strip() if detailed_rooms_element else 'No rooms found'\n",
+    "    all_detailed_rooms.append(detailed_rooms)\n",
+    "\n",
+    "    detailed_squareMeters_element = detailed_soup.find('div', class_='SpotlightAttributesUsableSpace_value_cpfrh')\n",
+    "    detailed_squareMeters = detailed_squareMeters_element.text.strip() if detailed_squareMeters_element else 'No square meters found'\n",
+    "    all_detailed_squareMeters.append(detailed_squareMeters)\n",
+    "\n",
+    "    detailed_description_element = detailed_soup.find('div', class_='Description_descriptionBody_AYyuy')\n",
+    "    detailed_description = detailed_description_element.text.strip() if detailed_description_element else 'No description found'\n",
+    "    all_detailed_descriptions.append(detailed_description)\n",
+    "\n",
+    "    detailed_coreAttributes_element = detailed_soup.find('div', class_='CoreAttributes_coreAttributes_e2NAm')\n",
+    "    detailed_coreAttributes = detailed_coreAttributes_element.text.strip() if detailed_coreAttributes_element else 'No Core Attributes found'\n",
+    "    all_detailed_coreAttributes.append(detailed_coreAttributes)\n",
+    "\n",
+    "\n",
+    "\n",
+    "    features_list = detailed_soup.find('ul', class_='FeaturesFurnishings_list_S54KV')\n",
+    "    features = ''\n",
+    "    for feature_item in features_list.find_all('li'):\n",
+    "        # Extract the text from the p tag within each li\n",
+    "        feature_text = feature_item.find('p').text.strip()\n",
+    "        if features:  # If features is not empty, add a comma before adding more text\n",
+    "            features += ', ' + feature_text\n",
+    "        else:  # If features is empty, just add the text\n",
+    "            features = feature_text\n",
+    "\n",
+    "    all_detailed_features.append(features)\n",
+    "\n",
+    "# Close the driver after scraping is done\n",
     "driver.close()\n",
     "\n",
-    "# Parse HTML content with BeautifulSoup\n",
-    "soup = BeautifulSoup(source, 'html.parser')\n",
+    "# Convert the scraped data to a DataFrame\n",
+    "df = pd.DataFrame({\n",
+    "    'Title': all_detailed_title,\n",
+    "    'Address': all_detailed_address,\n",
+    "    'Price': all_detailed_price,\n",
+    "    'Rooms': all_detailed_rooms,\n",
+    "    'SquareMeters': all_detailed_squareMeters,\n",
+    "    'CoreAttributes': all_detailed_coreAttributes,\n",
+    "    'Features': all_detailed_features,\n",
+    "    'Description': all_detailed_descriptions,\n",
+    "    'URL': all_detail_urls\n",
+    "                    })\n",
     "\n",
-    "# Get links\n",
-    "links = []\n",
-    "link_elements = soup.find_all(class_='css-qqdlpa')\n",
-    "for element in link_elements:\n",
-    "    links.append('https://www.autoscout24.ch' + element['href'])\n",
+    "# Get the current date\n",
+    "current_date = datetime.now().date()\n",
     "\n",
-    "# Get types\n",
-    "types_elements = soup.find_all(class_='chakra-heading css-svmyrf')\n",
-    "types = [element.text for element in types_elements]\n",
+    "# Add the current date to each entry in the DataFrame\n",
+    "df['Date'] = current_date\n",
     "\n",
-    "# Get prices\n",
-    "prices_elements = soup.find_all(class_='chakra-text css-bwl0or')\n",
-    "prices = [element.text for element in prices_elements]\n",
-    "\n",
-    "# Dataframe\n",
-    "df = pd.DataFrame({ 'Page': page.group(1),\n",
-    "                    'Type': types,\n",
-    "                    'Price': prices,\n",
-    "                    'Weblink': links})\n",
+    "csvName = 'immoscout24_zh.csv'\n",
     "\n",
     "# Save to file\n",
-    "df.to_csv('autoscout24.csv', sep=\";\", index=False)\n",
+    "df.to_csv(csvName, sep=\";\", index=False)\n",
     "\n",
     "# Show file\n",
-    "with open('autoscout24.csv') as table_file:\n",
+    "with open(csvName) as table_file:\n",
     "    tab = from_csv(table_file, delimiter=';')\n",
     "    \n",
     "    # Set the alignment for all columns to 'l' (left-align)\n",
