build the distance_builder

--- a/create_distance.ipynb
+++ b/create_distance.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,12 +24,14 @@
     "import json\n",
     "import urllib\n",
     "import requests\n",
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "from math import radians, cos, sin, sqrt, atan2\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +68,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'error': {'code': 400,\n",
+       "  'message': 'Please provide a type parameter. Possible values are locations, layers, featuresearch'},\n",
+       " 'success': False}"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parameters = {\"searchText\": address,\n",
+    "              \"origins\": \"address\",\n",
+    "              \"type\": \"locations\",\n",
+    "             }\n",
+    "response = requests.get(f\"{base_url}\", params=parameters)\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +115,7 @@
        "    'x': 262226.75,\n",
        "    'y': 697167.125,\n",
        "    'zoomlevel': 10},\n",
-       "   'id': 1553626,\n",
+       "   'id': 1573119,\n",
        "   'weight': 4},\n",
        "  {'attrs': {'detail': 'theaterstrasse 17 8400 winterthur 230 winterthur ch zh',\n",
        "    'featureId': '2323240_0',\n",
@@ -102,11 +131,11 @@
        "    'x': 262216.125,\n",
        "    'y': 697128.5625,\n",
        "    'zoomlevel': 10},\n",
-       "   'id': 919543,\n",
+       "   'id': 825032,\n",
        "   'weight': 1}]}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -143,11 +172,11 @@
        "  'x': 262226.75,\n",
        "  'y': 697167.125,\n",
        "  'zoomlevel': 10},\n",
-       " 'id': 1553626,\n",
+       " 'id': 1573119,\n",
        " 'weight': 4}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +196,7 @@
        "47.50360870361328"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +217,7 @@
        "8.728364944458008"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,6 +225,112 @@
    "source": [
     "Longitude = data['results'][0]['attrs']['lon']\n",
     "Longitude"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(46.93983840942383, 7.4366841316223145)"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_coordinates(address):\n",
+    "    base_url= \"https://api3.geo.admin.ch/rest/services/api/SearchServer?\"\n",
+    "    parameters = {\"searchText\": address,\n",
+    "                \"origins\": \"address\",\n",
+    "                \"type\": \"locations\",\n",
+    "                }\n",
+    "    r = requests.get(f\"{base_url}{urllib.parse.urlencode(parameters)}\")\n",
+    "    data = json.loads(r.content)\n",
+    "    Latitude = data['results'][0]['attrs']['lat']\n",
+    "    Longitude = data['results'][0]['attrs']['lon']\n",
+    "    return Latitude, Longitude  # return a tuple\n",
+    "\n",
+    "coordinates = get_coordinates(input(\"Enter the address: \"))\n",
+    "coordinates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_distance_to_station(Latitude, Longitude):\n",
+    "    \"\"\"\n",
+    "    This function determines the closesd trainstation based on the input coordinates and returns the distance between the given Point and the nearest station.\n",
+    "    NOTICE: Assumes that the input Points are in WGS84 projection (lat/lon).\n",
+    "    \"\"\"\n",
+    "    url = \"https://nominatim.openstreetmap.org/reverse\"\n",
+    "    params = {\n",
+    "        'format': 'json',\n",
+    "        'lat': Latitude,\n",
+    "        'lon': Longitude,\n",
+    "        'zoom': 18,\n",
+    "        'addressdetails': 1\n",
+    "    }\n",
+    "    response = requests.get(url, params=params)\n",
+    "    data = response.json()\n",
+    "    if 'address' in data and 'town' in data['address']:\n",
+    "        Town = data['address']['town']\n",
+    "    elif 'address' in data and 'city' in data['address']:\n",
+    "        Town = data['address']['city']\n",
+    "    else:\n",
+    "        return \"No town found\"\n",
+    "    \n",
+    "    url = \"http://transport.opendata.ch/v1/locations\"\n",
+    "    params = {\n",
+    "        'type': 'station',\n",
+    "        'query': Town\n",
+    "    }\n",
+    "    data = requests.get(url, params=params).json()\n",
+    "    station_lat = data[\"stations\"][0][\"coordinate\"][\"x\"]\n",
+    "    station_lon = data[\"stations\"][0][\"coordinate\"][\"y\"]\n",
+    "\n",
+    "    # Calculate the distance between the two points with pythagoras\n",
+    "    # Can not apply pythagoras directly, because the earth is not flat\n",
+    "    # Convert latitude and longitude to radians\n",
+    "    lat1, lon1, lat2, lon2 = map(radians, [Latitude, Longitude, station_lat, station_lon])\n",
+    "    \n",
+    "    # Haversine formula\n",
+    "    dlon = lon2 - lon1\n",
+    "    dlat = lat2 - lat1\n",
+    "    a = sin(dlat/2)**2 + cos(lat1) * cos(lat2) * sin(dlon/2)**2\n",
+    "    c = 2 * atan2(sqrt(a), sqrt(1-a))\n",
+    "    radius_of_earth_km = 6371.0\n",
+    "    distance = radius_of_earth_km * c\n",
+    "\n",
+    "    return distance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0172157309429812"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_distance_to_station(coordinates[0], coordinates[1])"
    ]
   },
   {
